# plutarch-numeric

./: CHANGELOG.md  Makefile  README.md  cabal.project  flake-module.nix  flake.nix  plutarch-numeric.cabal
.github/workflows/: integrate.yml
src/Plutarch/Numeric/: Additive.hs
