cabal-version:      3.0
name:               plutarch-numeric
version:            1.0.0
synopsis:           Better numerical hierarchy for Plutarch
description:        A brand new numerical hierarchy for Plutarch.
homepage:           https://github.com/Liqwid-Labs/plutarch-numeric
bug-reports:        https://github.com/Liqwid-Labs/plutarch-numeric/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Koz Ross
maintainer:         Koz Ross <koz@mlabs.city>
copyright:          (C) 2022 Liqwid Labs
category:           Test
build-type:         Simple
tested-with:        GHC ==9.2.4
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/Liqwid-Labs/liqwid-plutarch-extra

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror

  build-depends:
    , base            ^>=4.16
    , plutarch
    , plutarch-extra

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeOperators

  default-language:   Haskell2010

-- Libraries

library
  import:          common-lang
  exposed-modules: Plutarch.Numeric.Additive
  hs-source-dirs:  src
